--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,27 @@ matrix:
   - os: osx
     language: generic
     env: PYTHON=2.7
+  - os: osx
+    language: generic
+    env: PYTHON=3.4
+  - os: osx
+    language: generic
+    env: PYTHON=3.5
+  - os: osx
+    language: generic
+    env: PYTHON=3.6
+  - os: linux
+    language: generic
+    env: PYTHON=2.7
+  - os: linux
+    language: generic
+    env: PYTHON=3.4
+  - os: linux
+    language: generic
+    env: PYTHON=3.5
+  - os: linux
+    language: generic
+    env: PYTHON=3.6
 before_install:
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then if [[ "$PYTHON" == "2.7" ]]; then wget
   http://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -O miniconda.sh;
